--- a/p/ph/pha/pharmacy2u.co.uk.html
+++ b/p/ph/pha/pharmacy2u.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pharmacy2u.co.uk privacy policy that was archived on 2001-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011217014100id_/http%3A//www.pharmacy2u.co.uk/info.privacy.asp%3F) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pharmacy2u.co.uk privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602112222id_/http%3A//www.pharmacy2u.co.uk/info.privacy.asp%3F) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -265,7 +265,7 @@ function validateSearchForm(){
   <td width="124" height="18" align="center"><a href="http://www.pharmacy2u.co.uk/about.delivery.asp?" onmouseover="moveRollover(z,554)" onmouseout="moveRolloff()"><img src="assets/images/standard/menu/delivery.gif" width="124" height="18" border="0" alt=""></a></td>
 </tr>
 <tr>
-	<td width="124" height="18" align="center" valign="center"><img src="assets/images/standard/menu/freephone.gif" border="0"><br><br></td>
+	<td width="124" height="18" align="center" valign="center"><img src="assets/images/standard/menu/telephone.gif" border="0"><br><br></td>
 </tr>
 </tbody></table>
 <table width="124" height="100%" border="0" cellspacing="0" cellpadding="0">
@@ -293,7 +293,7 @@ function validateSearchForm(){
 
     <td width="96"><a href="http://www.pharmacy2u.co.uk/index.asp?"><img src="assets/images/standard/Nav_Home.gif" width="96" height="22" border="0"></a></td>
     <td width="115"><a href="http://www.pharmacy2u.co.uk/info.security.asp?"><img src="assets/images/standard/Nav_Secur.gif" width="115" height="22" border="0"></a></td>
-    <td width="143"><a href="#" onclick="window.open(&quot;freephone.html&quot;,&quot;Zoom&quot;,&quot;width=320,height=320&quot;)"><img src="assets/images/standard/Nav_freeph.gif" width="143" height="22" border="0"></a></td>
+    <td width="143"><a href="#" onclick="window.open(&quot;telephone.html&quot;,&quot;Zoom&quot;,&quot;width=320,height=320&quot;)"><img src="assets/images/standard/Nav_teleph.gif" width="143" height="22" border="0"></a></td>
     <td width="170"><a href="http://www.pharmacy2u.co.uk/info.contact.asp?"><img src="assets/images/standard/Nav_prodreq.gif" width="170" height="22" border="0"></a></td>
     <td><a href="http://www.pharmacy2u.co.uk/info.help.asp?" class="account"><img src="assets/images/standard/Nav_help.gif" width="96" height="22" border="0"></a></td>
   </tr>
@@ -335,10 +335,10 @@ function validateSearchForm(){
   </tr>
   <tr>
     <td>&nbsp;</td>
-    <td valign="top"><a href="http://www.pharmacy2u.co.uk/category.asp?ref=616810NA"><img src="banners/OBVitamin_120x60.gif" width="120" height="60" border="0"></a></td>
+    <td valign="top"><a href="http://www.pharmacy2u.co.uk/category.asp?ref=534625BE%5F324952CL"><img src="banners/Clarins_120x60.gif" width="120" height="60" border="0"></a></td>
     <td>&nbsp;</td>
     <td>
-		<a href="banners/redirect3.asp?URL=http://www.pharmacy2u.co.uk/category.secondary.asp?ref=534625BE%5F324952CL&amp;BannerID=1"><img src="banners/XmasClarins_468x60.gif" alt="Fantastic prices on a full range of Clarins products" border="0"></a></td>
+		<a href="banners/redirect.asp?URL=http://www.pharmacy2u.co.uk/category.asp?ref=534625BE%5F324952CL&amp;BannerID=9"><img src="banners/Clarins_468x60.gif" alt="Click here for great offers on Clarins" border="0"></a></td>
   </tr>
 </tbody></table>
 
@@ -380,18 +380,14 @@ At Pharmacy2U we are committed to protecting your privacy. We use the informatio
 
 <b>Will Pharmacy2U disclose the information it collects to outside parties?</b>
 <br><br>
-Pharmacy2U does not sell, trade or rent your personal information to others. Pharmacy2U may provide aggregate statistics about our customers, sales, traffic patterns and related site information to reputable third parties, but these statistics will NOT include any information which could be linked to you personally.
-<br><br>
-<b>In Summary</b>
-<br><br>
-We are committed to protecting your privacy. We use the information we collect on the site to make shopping at Pharmacy2U possible and to enhance your overall shopping experience.
+Pharmacy2U may sell, trade or rent your personal information to others. Pharmacy2U may provide aggregate statistics about our customers, sales, traffic patterns and related site information to reputable third parties.
 <br><br>
 <b>Your Consent</b>
 <br><br>
 By using our Web site, you consent to the collection and use of information you submit by Pharmacy2U for the purposes described above. If we decide to change our privacy policy, we will post those changes on this page so that you are always aware of what information we collect, and how we use it.
 
 <br><br>
-If you have any questions please feel free to email Pharmacy2U's Personnel Manager <a href="mailto:fiona@pharmacy2u.co.uk">Fiona Durham</a>
+If you have any questions please feel free to email Pharmacy2U's Customer Service Manager <a href="mailto:hazel@pharmacy2u.co.uk">Hazel Wriglesworth</a>
 
 
 <!-- close content -->
