--- a/a/ar/arl/arlingtonpark.com.html
+++ b/a/ar/arl/arlingtonpark.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the arlingtonpark.com privacy policy that was archived on 2001-12-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011204194109id_/http%3A//www.churchilldownsincorporated.com/about/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the arlingtonpark.com privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602112456id_/http%3A//www.churchilldownsincorporated.com/about/privacy_policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<title>Churchill Downs Incorporated | About CDI | Privacy Policy |</title>
@@ -65,7 +65,11 @@ if (document.layers) {
 
 <td align="center" valign="top" class="txtAQUAbold"> | </td>
 
-<td align="center" valign="top" class="txtAQUAbold"><a href="http://www.churchilldowns.com/kderby/" class="txtAQUAbold">Kentucky Derby <img src="/images/2001/cdsntopnav/smallrose.gif" width="16" height="15" border="0" align="absmiddle"></a></td>
+<td align="center" valign="top" class="txtAQUAbold"><a href="http://www.kentuckyderby.com/" class="txtAQUAbold">Kentucky Derby<img src="/images/2001/cdsntopnav/smallrose.gif" width="16" height="15" border="0" align="absmiddle"></a>
+
+<!-- TSC COOKIE TRACKING -->
+<img src="http://www.twinspiresclub.com/points/image-redirect.jsp" width="1" height="1">
+<!-- /TSC COOKIE TRACKING --></td>
 </tr>
 </tbody></table>
 <!-- /CDSN TOP NAV -->
@@ -90,9 +94,30 @@ if (document.layers) {
 <img src="/images/2001/general/i.gif" width="1" height="1" alt="" border="0"></td>
 
 <td valign="middle" bgcolor="#CC9900">
+<script language="javascript">
+<!--
+var browserName = navigator.appName;
+var browserVer = parseInt(navigator.appVersion);
+var UserAgent = navigator.userAgent.toLowerCase();
+var nonSSIc = '<a href="http://ads.churchilldownsincorporated.com/cgi-bin/getlink.cgi?region=1&zone=1&type=nossi&cachebuster=' + (new Date()).getTime()+'" target="_top"><img src="http://ads.churchilldownsincorporated.com/cgi-bin/getad.cgi?region=1&zone=1&type=nossi&cachebuster=' + (new Date()).getTime() + '" width="468" height="60" border=1 ALT="Click to Visit"></a>';
 
-<a href="http://ad.doubleclick.net/jump/www.churchilldownsincorporated.com/;sz=468x60;tile=1;ord=124109">
-<img src="http://ad.doubleclick.net/ad/www.churchilldownsincorporated.com/;sz=468x60;tile=1;ord=124109" border="0" height="60" width="468"></a><img src="/images/2001/general/i.gif" width="2" height="1" alt="" border="0"></td>
+if (browserName == "Netscape"){
+    if ((browserVer>=4)&&(UserAgent.indexOf("mac")==-1)){
+        document.write('<S'+'CRIPT src="http://ads.churchilldownsincorporated.com/cgi-bin/getad.cgi?region=1&zone=1&type=advanced&issc=yes&cachebuster=' + (new Date()).getTime() + '">');
+        document.write('</'+'scr'+'ipt>');
+    }else if (browserVer>=3){
+        document.write(nonSSIc);
+    }
+}else if (browserName=="Microsoft Internet Explorer"){
+    document.write('<ifr'+'ame src="http://ads.churchilldownsincorporated.com/cgi-bin/getad.cgi?region=1&zone=1&type=advanced&cachebuster=' + (new Date()).getTime() + '" width="468" height="60" Marginwidth=0 Marginheight=0 Hspace=0 Vspace=0 Frameborder=0 Scrolling=No target="_top"></ifr'+'ame>');
+}else{
+        document.write(nonSSIc);
+}
+// -->
+</script><script src="http://ads.churchilldownsincorporated.com/cgi-bin/getad.cgi?region=1&amp;zone=1&amp;type=advanced&amp;issc=yes&amp;cachebuster=1580508341995"></script>
+<noscript>
+<a href="http://ads.churchilldownsincorporated.com/cgi-bin/getlink.cgi?region=1&zone=1&type=nossi" target="_top"><img src="http://ads.churchilldownsincorporated.com/cgi-bin/getad.cgi?region=1&zone=1&type=nossi" width="468" height="60" border=1 ALT="Click to Visit"></a>
+</noscript><img src="/images/2001/general/i.gif" width="2" height="1" alt="" border="0"></td>
 </tr>
 
 </tbody></table>
@@ -133,7 +158,7 @@ var thisTitle = document.title;
 
 
 var s = href.split("/"); 
-var r = thisTitle.split("|");
+var r = thisTitle.split(" |");
 
 
 for (var i=2;i<(s.length-1);i++) {
@@ -153,7 +178,7 @@ document.writeln(url);
 
 // End -->
 
-</script><a href="https://web.archive.org/" class="smallWHITE">Churchill Downs Incorporated </a> <span class="smallWHITE">»</span> <a href="https://web/" class="smallWHITE"> About CDI </a> <span class="smallWHITE">»</span> <a href="https://web.archive.org/web/20011204194109id_/" class="smallWHITE"> Privacy Policy </a> <span class="smallWHITE">»</span> <a href="https://web.archive.org/web/20011204194109id_/http%3A/" class="smallWHITE"></a> <span class="smallWHITE">»</span> <a href="/" class="smallWHITE">undefined</a> <span class="smallWHITE">»</span> <a href="https://web.archive.org/web/20011204194109id_/http%3A//www.churchilldownsincorporated.com/" class="smallWHITE">undefined</a> <span class="smallWHITE">»</span> <a href="https://web.archive.org/web/20011204194109id_/http%3A//www.churchilldownsincorporated.com/about/" class="smallWHITE">undefined</a> <span class="smallWHITE">»</span> <span class="smallWHITE">undefined</span>
+</script><a href="https://web.archive.org/" class="smallWHITE">Churchill Downs Incorporated</a> <span class="smallWHITE">»</span> <a href="https://web/" class="smallWHITE"> About CDI</a> <span class="smallWHITE">»</span> <a href="https://web.archive.org/web/20020602112456id_/" class="smallWHITE"> Privacy Policy</a> <span class="smallWHITE">»</span> <a href="https://web.archive.org/web/20020602112456id_/http%3A/" class="smallWHITE"></a> <span class="smallWHITE">»</span> <a href="/" class="smallWHITE">undefined</a> <span class="smallWHITE">»</span> <a href="https://web.archive.org/web/20020602112456id_/http%3A//www.churchilldownsincorporated.com/" class="smallWHITE">undefined</a> <span class="smallWHITE">»</span> <a href="https://web.archive.org/web/20020602112456id_/http%3A//www.churchilldownsincorporated.com/about/" class="smallWHITE">undefined</a> <span class="smallWHITE">»</span> <span class="smallWHITE">undefined</span>
 </td>
 
 </tr>
@@ -226,7 +251,7 @@ document.writeln(url);
 	<td width="100%" align="right" valign="middle">
 	<!-- TODAYS DATE -->
 	
-	<span class="txt">Tuesday, December  4 2001</span>
+	<span class="txt">Sunday, June  2 2002</span>
 	<!-- /TODAYS DATE -->
 
 	<img src="/images/2001/general/i.gif" width="10" height="1" border="0"></td>
@@ -251,7 +276,7 @@ Our site uses an order form for customers to request information, products, and 
 
 Our online surveys asks visitors for contact information (like their email address) and demographic information (like their zip code, age, or income level). The customer's contact information is used to contact the visitor when necessary. For example, if a customer has won a prize associated with the survey. Users may opt-out of receiving future mailings; see the choice/opt-out section below. Demographic and profile data is also collected at our site. We use this data to tailor our visitor's experience at our site, continually evolving the presentation of content on our site. This information is shared with advertisers on an aggregate basis.</p><p>
 
-We run contests on our site in which we ask visitors for contact information (like their email address) and demographic information (like their zip code, age,or income level). The customer's contact information is used to contact the visitor when necessary. Users may opt-out of receiving future mailings; see the choice/opt-out section below. Demographic and profile data is alsocollected at our site. This information is shared with advertisers on an aggregate basis.</p><p>
+We run contests on our site in which we ask visitors for contact information (like their email address) and demographic information (like their zip code, age,or income level). The customer's contact information is used to contact the visitor when necessary. Users may opt-out of receiving future mailings; see the choice/opt-out section below. Demographic and profile data is also collected at our site. This information is shared with advertisers on an aggregate basis and internally when applicable.</p><p>
 
 <span class="txtBOLD">Security</span></p><p>
 
@@ -286,12 +311,30 @@ Louisville, KY 40208<br>
 <table cellpadding="0" cellspacing="0" border="0" align="center">
 <tbody><tr>
 <td>
+<script language="javascript">
+<!--
+var browserName = navigator.appName;
+var browserVer = parseInt(navigator.appVersion);
+var UserAgent = navigator.userAgent.toLowerCase();
+var nonSSIc = '<a href="http://ads.churchilldownsincorporated.com/cgi-bin/getlink.cgi?region=1&zone=2&type=nossi&cachebuster=' + (new Date()).getTime()+'" target="_top"><img src="http://ads.churchilldownsincorporated.com/cgi-bin/getad.cgi?region=1&zone=2&type=nossi&cachebuster=' + (new Date()).getTime() + '" width="120" height="60" border=1 ALT="Click to Visit"></a>';
 
-<a href="http://ad.doubleclick.net/jump/www.churchilldownsincorporated.com/;sz=120x60;tile=1;ord=124109">
-<img src="http://ad.doubleclick.net/ad/www.churchilldownsincorporated.com/;sz=120x60;tile=1;ord=124109" border="0" width="120" height="60"></a><p>
-
-<!-- <A HREF="http://ad.doubleclick.net/jump/www.churchilldownsincorporated.com/;sz=120x60;tile=2;ord=124109">
-<IMG SRC="http://ad.doubleclick.net/ad/www.churchilldownsincorporated.com/;sz=120x60;tile=2;ord=124109" border=0 width="120" height="60"></A> --></p></td>
+if (browserName == "Netscape"){
+    if ((browserVer>=4)&&(UserAgent.indexOf("mac")==-1)){
+        document.write('<S'+'CRIPT src="http://ads.churchilldownsincorporated.com/cgi-bin/getad.cgi?region=1&zone=2&type=advanced&issc=yes&cachebuster=' + (new Date()).getTime() + '">');
+        document.write('</'+'scr'+'ipt>');
+    }else if (browserVer>=3){
+        document.write(nonSSIc);
+    }
+}else if (browserName=="Microsoft Internet Explorer"){
+    document.write('<ifr'+'ame src="http://ads.churchilldownsincorporated.com/cgi-bin/getad.cgi?region=1&zone=2&type=advanced&cachebuster=' + (new Date()).getTime() + '" width="120" height="60" Marginwidth=0 Marginheight=0 Hspace=0 Vspace=0 Frameborder=0 Scrolling=No target="_top"></ifr'+'ame>');
+}else{
+        document.write(nonSSIc);
+}
+// -->
+</script><script src="http://ads.churchilldownsincorporated.com/cgi-bin/getad.cgi?region=1&amp;zone=2&amp;type=advanced&amp;issc=yes&amp;cachebuster=1580508342017"></script>
+<noscript>
+<a href="http://ads.churchilldownsincorporated.com/cgi-bin/getlink.cgi?region=1&zone=2&type=nossi" target="_top"><img src="http://ads.churchilldownsincorporated.com/cgi-bin/getad.cgi?region=1&zone=2&type=nossi" width="120" height="60" border=1 ALT="Click to Visit"></a>
+</noscript></td>
 </tr>
 </tbody></table>
 </td>
@@ -317,14 +360,13 @@ Louisville, KY 40208<br>
 	</tbody></table>
 	<!-- 100% WIDTH PUSHER -->
 	<p>
-		<span class="txtBOLD">CDI Affiliates:</span> [ <a href="http://www.tracksideotb.com/" class="footer">Trackside</a> | <a href="http://www.charlson.com/" class="footer">Charlson Broadcast</a> | 
-	<a href="http://www.equisource.com/" class="footer">Equisource</a> | <a href="http://www.nasrin.com/" class="footer">Nasrin</a> ]</p></td>
+		<span class="txtBOLD">CDI Affiliates:</span> [ <a href="http://www.tracksideotb.com/" class="footer">Trackside</a> | <a href="http://www.charlson.com/" class="footer">Charlson Broadcast</a> | <a href="http://www.nasrin.com/" class="footer">Nasrin</a> ]</p></td>
     <td rowspan="2"><img src="/images/2001/general/i.gif" width="160" height="1" border="0"></td>
 </tr>
 <tr>
-    <td colspan="2" align="left" class="footer" width="100%">[ <a href="http://www.churchilldowns.com/cgi-bin/contact.pl" class="footer">Contact Us</a> | <a href="http://www.churchilldownsincorporated.com/about/privacy_policy.html" class="footer">Privacy Policy</a> | 
+    <td colspan="2" align="left" class="footer" width="100%">[ <a href="/about/contact_us.html" class="footer">Contact Us</a> | <a href="http://www.churchilldownsincorporated.com/about/privacy_policy.html" class="footer">Privacy Policy</a> | 
 	<a href="http://www.churchilldownsincorporated.com/sponsorship_opportunities/" class="footer">Sponsorship Opportunities</a> ]<br>
-	<span class="footerTXT">Copyright © 2001 Churchill Downs Incorporated.  All rights reserved.</span></td>
+	<span class="footerTXT">Copyright © 2002 Churchill Downs Incorporated.  All rights reserved.</span></td>
 </tr>
 </tbody></table>
 <!-- /FOOTER -->
