--- a/a/af/af./af.mil.html
+++ b/a/af/af./af.mil.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the af.mil privacy policy that was archived on 2001-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011217215403id_/http%3A//www.af.mil/disclaimer.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the af.mil privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602113154id_/http%3A//www.af.mil/disclaimer.shtml) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Language" content="en-us">
@@ -85,18 +85,7 @@
                   <p><font face="Arial, helvetica" size="2">2. Information presented on Air Force Link is considered
             public information and may be distributed or copied. Use of appropriate byline/photo/image
             credits is requested.</font> </p>
-                  <p><font face="Arial, Helvetica, sans-serif" size="2">3. Air 
-                    Force Link uses persistent cookies for registered users (persistent 
-                    tokens that pass information back and forth from the client 
-                    machine to the server). These cookies are used to access your 
-                    personal preferences and maintain the special links that you 
-                    have selected. </font><font size="2" face="Arial, Helvetica, sans-serif"> 
-                    Information collected is safeguarded in files which are password 
-                    protected and to which access is physically restricted.You 
-                    can choose not to accept cookies and still use the portal. 
-                    You will be required to login each time that you want to view 
-                    your personal page.</font></p>
-                  <p><font face="Arial, Helvetica, sans-serif" size="2">4. For 
+                  <p><font face="Arial, Helvetica, sans-serif" size="2">3. For 
                     site management, <a href="http://www.dtic.mil/warning/example.html">information 
                     is collected</a> for analytical</font><font face="Arial, helvetica" size="2"> 
                     and statistical purposes. This government computer system 
@@ -105,13 +94,13 @@
                     of most and least interest, determining technical design specifications, 
                     and identifying system performance or problem areas.</font> 
                   </p>
-                  <p><font face="Arial, helvetica" size="2">5. For site security 
+                  <p><font face="Arial, helvetica" size="2">4. For site security 
                     purposes and to ensure that this service remains available 
                     to all users, this government computer system employs software 
                     programs to monitor network traffic, to identify unauthorized 
                     attempts, to upload or change information, or otherwise cause 
                     damage.</font> </p>
-                  <p><font face="Arial, helvetica" size="2">6.&nbsp; Raw data 
+                  <p><font face="Arial, helvetica" size="2">5. Raw data 
                     logs will only be used to identify individual users and their 
                     usage habits for authorized law enforcement investigations 
                     or national security purposes.&nbsp; These logs are used for 
@@ -119,14 +108,14 @@
                     in accordance with National Archives and Records Administration 
                     <a href="http://gopher.nara.gov:70/0/managers/federal/grsfr.txt">General 
                     Schedule 20</a>.</font> </p>
-                  <p><font face="Arial, helvetica" size="2">7. Unauthorized attempts 
+                  <p><font face="Arial, helvetica" size="2">6. Unauthorized attempts 
                     to deny service, upload information, change information, or 
                     to attempt to access a non-public site from this service are 
                     strictly prohibited and may be punishable under Title 18 of 
                     the U.S. Code to include the Computer Fraud and Abuse Act 
                     of 1986 and the National Information Infrastructure Protection 
                     Act.</font> </p>
-                  <p><font face="Arial, helvetica" size="2">8. If you have any 
+                  <p><font face="Arial, helvetica" size="2">7. If you have any 
                     questions or comments about the information presented here, 
                     please forward them to us using the Air Force Link <a href="contactus.shtml">Comment Form</a>.</font></p>
             <p><font face="Arial, helvetica" size="2"><b>The Presence of Commercial/External
