--- a/a/am/ame/americorps.gov.html
+++ b/a/am/ame/americorps.gov.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the americorps.gov privacy policy that was archived on 2001-12-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011204215340id_/http%3A//www.nationalservice.org/privacy_pol.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the americorps.gov privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602140854id_/http%3A//www.nationalservice.org/privacy_pol.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd"><html><head>
 <title>Corporation for National Service : Privacy Policy</title> 
@@ -25,46 +25,41 @@
 					<b><a href="about/index.html">About Us</a> : <a href="about/policies.html">Corporation Policies</a> : Privacy Policy</b></font>
 <br><br>
 
-<font size="1" face="Verdana, arial, sans-serif">
+ <br> <b>Disclaimer </b><br>
 
-<b>Disclaimer </b><br>
-Some of the documents on this server may contain live references (or pointers) to information created and maintained by other organizations. Please note that the Corporation does not control and cannot guarantee the relevance, timeliness, or accuracy of these outside materials. Before leaving the Corporation's website, a page will appear informing you that you are leaving our server. Once you link to another site, you are subject to the privacy policy of the new site.
+Some of the documents on this server may contain live references (or pointers) to information created and maintained by other organizations. Please note that the Corporation does not control and cannot guarantee the relevance, timeliness, or accuracy of these outside materials. Once you link to another site, you are subject to the privacy policy of the new site. 
 <br><br>
-This web site and the information it contains are considered public information, are provided as a public service by the Corporation for National Service (Corporation), and may be distributed or copied. This system is monitored to ensure proper operation, to verify the functioning of applicable security features, and for other like purposes.
-</font><br><br>
+Except for the AmeriCorps recruitment profiles and application, and the Record of Service, this web site and the information it contains are considered public information, are provided as a public service by the Corporation for National and Community Service (Corporation), and may be distributed or copied. This system is monitored to ensure proper operation, to verify the functioning of applicable security features, and for other like purposes. 
 
-Thank you for visiting the Corporation for National Service's website. This policy explains how the Corporation will handle information we learn about you from your visit to our website. The information we receive depends on what you do when visiting our site. It can be categorized as <b>anonymous information</b> (which cannot be tied back to you as an individual) or <b>personally identifiable information</b> (which tells us specifically who you are, e.g., your name, phone number, e-mail or postal address). <br><br>
-
-Anonymous and personally identifiable information are collected and used in the following ways:<br><br>
-
+<br><br>
+Thank you for visiting the Corporation's website. This policy explains how the Corporation will handle information we learn about you from your visit to our website. 
+<br><br>
 <b>Browsing or Downloading</b><br>
-If you browse through our site to browse or download information, we collect the following anonymous information: 1) the name of the domain from which you access the Internet; 2) the date and time you access our site; and 3) the Internet address of the website from which you linked directly to our site.  <br><br>
-
-<b>Sending Us an E-mail</b><br>
-You also may decide to send us personally identifying information. Any information that we collect may be subject to disclosure, but will be handled in accordance with the requirements of the <a href="about/policies.html">Privacy Act</a>, and the <a href="about/foia/index.html">Freedom of Information Act</a> to ensure the greatest protection of personal privacy in the face of any required disclosure. Except as might be required by law, we do not share any information we receive with any outside parties.<br><br> 
-
-<b>Registering and applying for AmeriCorps</b>
-The same policies regarding e-mail, browsing, and downloading information apply to potential AmeriCorps members browsing the <a href="http://www.americorps.org/joining/index.asp">How to Join AmeriCorps</a> section of the website. In addition, all personally identifiable information is kept confidential and secure.  Only projects that you apply to will be able to view your application information.  See Privacy Act Notice below for the <a href="#pan1">Registering with AmeriCorps</a> for the Customized Search and <a href="#pan2">Applying to an AmeriCorps project</a>.<br><br>
-
-<b>Use of Cookies<br>
-What is a cookie?</b>
-A cookie is a piece of information that is sent to your browser, along with a Web page, when you access a Website. There are two kinds of cookies. A <b>session cookie</b> is a line of text that is stored temporarily in your computer's RAM. Because a session cookie is never written to a drive, it is destroyed as soon as you close your browser. A <b>persistent cookie</b> is a more permanent line of text that gets saved by your browser to a file on your hard drive. If you have your browser set to notify you before accepting cookies the notice will tell you if the cookie expires some time in the future or not. Persistent cookies have an expiration date in the future. Session cookies have no date associated with them.<br><br>
-
-<b>The Corporation for National Service website does not use persistent cookies.</b> If your browser accepts cookies we may use cookies to secure the connection during a session visit. Only when entering a specific session or page, will a cookie be enabled to ensure your visit is secure. The cookie will be deleted when the visitor ends the session. To ensure your session has ended, close your browser.<br><br>
-
-<b>Site Management</b><br>
-For site management, information is collected for statistical purposes. This government computer system uses software programs to create summary statistics, which are used for such purposes as assessing what information is of most and least interest, determining technical design specifications, and identifying system performance or problem areas. We use the information we collect to measure the number of visitors to the different sections of our site, and to help us make our site more useful to visitors. This information is only used internally, does not contain personal identifiers, and will only be used for internal management purposes.
+If you browse through our site or download information, we automatically collect and temporarily store the following anonymous information about your visit: 1) the name of the domain from which you access the Internet; 2) the date and time you access our site; and 3) the Internet address of the website from which you linked directly to our site.   We use this information for statistical purposes and to help us make our site more useful to visitors.  Unless it is specifically stated otherwise, no additional information will be collected about you. We do not disclose, give, sell or transfer any personal information we receive to any outside parties, unless required for law enforcement or statute.
 <br><br>
-
-If you have any questions about this privacy statement, the practices of this site, or your dealings with this website, you can contact us at:<br><br>
-	
+<b>Use of Cookies</b><br>
+Sometimes we use "session cookies" which are small amounts of information stored on your computer to secure the connection during a your visit.  After you turn off your computer or stop using the internet, the cookies are erased.
+<br><br>
+<b>Sending Us an E-mail</b><br>
+If you decide to send us personally identifying information, such as in an e-mail, that information may be subject to disclosure.  It will be handled in accordance with the Privacy Act and the Freedom of Information Act, which restrict our use of it, yet permits certain disclosures. 
+<br><br>
+If you have any questions about this Privacy Policy, the practices of this site, or your dealings with this website, you can contact us at:
+<br><br>
 Corporation for National Service<br>
 1201 New York Ave., NW<br>
-Washington DC  20525<br>
+Washington DC 20525<br>
 202-606-5000<br>
-<a href="mailto:webmaster@cns.gov">webmaster@cns.gov</a>
+<a href="mailto:webmaster@cns.gov">webmaster@cns.gov</a> 
 
-<font face="Verdana, Arial, sans-serif" size="1">
+<br><br><a name="ros"></a><b>A Record of Service</b><br>
+Your e-mail address is only used because it is the best way for you to sign in with a unique identity that's easy to remember. No e-mail will be sent to you unless you ask for it. We do not share e-mail addresses with third-parties, other than to manage our database.<br><br>
+
+<b>Privacy Act Statement:</b>  In compliance with the Privacy Act of 1974, the following information is provided.  The collection of this information is authorized by the National and Community Service Act, as amended by the National and Community Service Trust Act of 1993.  The primary purpose of the user account is to provide a means that allows individuals to record, track, and provide comment on their volunteer services.  Users may also elect to be provided with additional information about other service opportunities.  Providing this information is voluntary. All information contained in each user account is available only to the Corporation, on behalf of USA Freedom Corps, and will not be provided to any organization outside the Corporation.
+<br><br>
+<b>Public Burden Statement:</b>  Public reporting burden for this collection of information is estimated at 3 minutes, which includes the initial log-on, providing initial profile user, recording of volunteer service information, and log-off from the diary.  Comments on the burden or content of the instrument may be sent to the Corporation for National and Community Service, Attn:  Director, Public Affairs and Liaison Office, 1201 New York Avenue, N.W., Washington, D.C., 20525.  (5 C.F.R. 1320.5(b)(2)(b))  The Corporation informs the potential persons who wish to respond to the collection of information that such persons are not required to respond to the collection of information unless it displays a currently valid OMB control number which is located on this website.
+<br><br>
+OMB Control Number - 3045-0077		Expiration Date:  September 30, 2002
+
 
 <a name="pan1"></a><p><b>Registering for the Customized Search - Interest Profile</b><br>
 OMB# 3045-0004 expires 10/31/2003<br>
@@ -82,7 +77,36 @@ OMB# 3045-0054 expires 06/30/2002<br>
 <br>
 <b>PRIVACY ACT NOTICE:</b> The Privacy Act of 1974 (5 U.S.C § 552a) requires that the following notice be provided to you: The authority for collecting information from you in this application is contained in 42 U.S.C 12592 and 12615 of the National and Community Service Act of 1990 as amended, and 42 U.S.C. 4953 of the Domestic Volunteer Service Act of 1973 as amended. You are advised that submission of the information is entirely voluntary, but the requested information is required in order for you to participate in AmeriCorps programs. The principal purpose for requesting this personal information is to process your application for acceptance into an AmeriCorps program, and for other general routine purposes associated with your participation in an AmeriCorps program. These routine purposes may include disclosure of the information to federal, state, or local agencies pursuant to lawfully authorized requests, to present and former employers, references provided by you in your application, and educational institutions, for the purpose of verifying the information provided by you in your application. In some programs, the information may also be provided to federal, state, and local law enforcement agencies to determine the existence of any prior criminal convictions. The information will not otherwise be disclosed to entities outside of AmeriCorps and the Corporation for National Service without your prior written permission. <br>
 <br>
-</p></font>
+</p><a name="pfs"></a>
+<b>Presidential Freedom Scholarships</b><br>
+The student’s name may be used for news or
+publicity purposes connected with the Presidential
+Freedom Scholarships program. However, other
+student information will not be shared with anyone
+outside of the Corporation for National and Community
+Service or its designees but for the sole purpose
+of disbursing the scholarship. Addresses, phone
+numbers, student’s social security number, and other
+personal information will not be provided to any
+third party.
+<br><br>
+We do not collect information for commercial
+marketing.
+
+<br><br>The school information and matching funds source
+information will not be shared with anyone outside of
+the Corporation for National and Community Service
+or its designees.
+
+<br><br>We will use information on the certification form
+only to process it and to respond to you directly for
+clarification if needed. We may also use the information
+for follow-up mailings related to the Presidential
+Freedom Scholarships program to schools, colleges,
+matching scholarships providers, and service sites.
+
+
+
 
 						
 					
